messaging_app/messaging_app/green_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-app-green
  labels:
    app: messaging-app
    version: green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: messaging-app
      version: green
  template:
    metadata:
      labels:
        app: messaging-app
        version: green
    spec:
      containers:
        - name: web
          image: messaging-app:green
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          command: ["/bin/bash", "-lc"]
          args:
            - |
              python manage.py migrate && \
              python manage.py runserver 0.0.0.0:8000
          readinessProbe:
            httpGet: { path: "/", port: 8000 }
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            tcpSocket: { port: 8000 }
            initialDelaySeconds: 20
            periodSeconds: 15
