messaging_app/messaging_app/kubeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: messaging-app
  labels:
    app: messaging-app
spec:
  type: ClusterIP
  selector:
    app: messaging-app   # <-- matches BOTH blue and green
  ports:
    - name: http
      port: 8000
      targetPort: 8000
